--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shahnama Storyscroll</title>
+    <title>Shahnama Storyscroll Template</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div id="title" class="title-text">
-      <h3>Shahnama Storyscroll</h3>
+      <h3>Shahnama Storyscroll Template</h3>
         <small>Scroll <i class="fa fa-chevron-down"></i></small>
     </div>
     <div id="narration">
