--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div id="title" class="title-text">
-      <h3>Shahnama Storyscroll Template</h3>
+      <h3>Ibrahim Sultan hunting</h3>
         <small>Scroll <i class="fa fa-chevron-down"></i></small>
     </div>
     <div id="narration">
