--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shahnama Storyscroll Template</title>
+    <title>Storyscroll Template - Tiled Image</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <!--<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/> -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <!-- load jQuery  -->
@@ -22,7 +23,7 @@
   </head>
   <body>
     <div id="title" class="title-text">
-      <h2>Ibrahim Sultan hunting</h2>
+      <h2>Title of Scene</h2>
         <small>Scroll <i class="fa fa-chevron-down"></i></small>
     </div>
     <div id="narration">
