--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Storyscroll Template - Tiled Image</title>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-    <!--<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/> -->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>-->
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <!-- load jQuery  -->
@@ -15,11 +15,6 @@
     <script src="markers/leaflet.extra-markers.min.js"></script>
     <link rel="stylesheet" href="markers/leaflet.extra-markers.min.css">
     <link rel="stylesheet" href="style.css">
-    <style>
-      html, body, #map {
-        background-color: #fff
-      }
-    </style>
   </head>
   <body>
     <div id="title" class="title-text">
