--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="markers/leaflet.extra-markers.min.js"></script>
     <link rel="stylesheet" href="markers/leaflet.extra-markers.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-desktop.css">
   </head>
   <body>
     <div id="title" class="title-text">
