--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shahnama Storyscroll Template</title>
+    <!-- Browser Tab Title-->
+    <title>Shahnama Storyscroll Template</title> 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
@@ -14,6 +15,7 @@
     <script src="markers/leaflet.extra-markers.min.js"></script>
     <link rel="stylesheet" href="markers/leaflet.extra-markers.min.css">
     <link rel="stylesheet" href="style.css">
+    <!-- Background colour -->
     <style>
       html, body, #map {
         background-color: #fff
@@ -22,6 +24,7 @@
   </head>
   <body>
     <div id="title" class="title-text">
+      <!-- Storyscroll Heading-->
       <h2>Ibrahim Sultan hunting</h2>
         <small>Scroll <i class="fa fa-chevron-down"></i></small>
     </div>
